add tittle and DOCTYPE to index.html

--- a/web_basics/index.html
+++ b/web_basics/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>first web page</title>
 </head>
 <body>
   <h1>hey there, here is my first web page!!</h1>
