updating index.html with release 2 from 2.1 Web and HTML Basics challenge

--- a/web_basics/index.html
+++ b/web_basics/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>first web page</title>
+  <title>Bass guitars</title>
 </head>
 <body>
-  <h1>hey there, here is my first web page!!</h1>
+
+  <h1>Best bass guitar brands</h1>
+
+  <p>if you are a <strong>bass</strong> guitar player definitely you already heard about these brands bellow. Play these brands is a <strong><em>dream</em></strong> for many musicians who are starting their careers.</p>
+
+  <h3>Most desirable brands</h3>
+
+  <ol>
+    <li>Rickandbacker</li>
+    <li>Fender</li>
+    <li>MusicMan</li>
+    <li>Fodera</li>
+  </ol>
+
+  <p>In the list bellow are some of the <strong>most popular</strong> bass players in world and their basses.</p>
+  <ul>
+    <li>Paul McCartney (The Beatles) - Rickandbacker or Hofner </li>
+    <li>Flea (Red Hot Chili Peppers ) - Music Man</li>
+    <li>Steve Harris (Iron Maiden) - Fender <em>Precision</em></li>
+    <li>Jonh Paul Jones (Led Zeppellin)- Fender</li>
+    <li>Geddy lee (Rush) - Fender <em>Jazz Bass</em> </li>
+    <li>Victor Wooten - Fodera</li>
+    <li>Stanley Clarke - Alembic</li>
+  </ul>
+
+  <p>Click <a href="https://en.wikipedia.org/wiki/Bass_guitar"><strong><em>here</em></strong></a> for more information about this amazing instrument.</p>
+
 </body>
 </html>
