--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -4,7 +4,7 @@
   <title>Bass Guitar Table</title>
 </head>
 <body>
-  <table>
+  <table border="1">
     <tr>
       <th>Brand</th>
       <th>Model</th>
