add Release 1: Get Fancy with Row and Column Span, and fix type jass -> jazz

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -12,7 +12,7 @@
     </tr>
     <tr>
       <td>Fender</td>
-      <td>Jass Bass</td>
+      <td>Jazz Bass</td>
       <td>1250,00</td>
     </tr>
     <tr>
@@ -22,7 +22,34 @@
     </tr>
     <tr>
       <td>Rickendbacker</td>
-      <td>Corvette</td>
+      <td>4003</td>
+      <td>3500,00</td>
+    </tr>
+  </table>
+
+  <br>
+
+  <table border="1">
+    <tr>
+      <th>Brand</th>
+      <th>Model</th>
+      <th>Price $</th>
+    </tr>
+    <tr>
+      <td rowspan="3">Fender</td>
+      <td>Jazz Bass</td>
+      <td>1599,00</td>
+    </tr>
+    <tr>
+      <td>Precision</td>
+      <td>1799,00</td>
+    </tr>
+    <tr>
+      <td>Jaguar</td>
+      <td>599,00</td>
+    </tr>
+    <tr>
+      <td colspan="2">Rickendbacker</td>
       <td>2000,00</td>
     </tr>
   </table>
