--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -3,11 +3,15 @@
   <title>Moon boots</title>
 </head>
 <body>
-<h1>Moon Boots Features</h1>
-<ul>
-  <li>Is comfortable at no gravity and low gravity</li>
-  <li>Durable against moon dust</li>
-  <li>Comes with extra dust shoe laces"</li>
-</ul>
+  <header>
+    <a href="index.html">Back</a>
+  </header>
+
+  <h1>Moon Boots Features</h1>
+  <ul>
+    <li>Is comfortable at no gravity and low gravity</li>
+    <li>Durable against moon dust</li>
+    <li>Comes with extra dust shoe laces"</li>
+  </ul>
 </body>
 </html>
