Image has added to the products page

--- a/html/moon_bootz/product_details.html
+++ b/html/moon_bootz/product_details.html
@@ -6,7 +6,7 @@
   <header>
     <a href="index.html">Back</a>
   </header>
-
+  <img alt="Moon Boot Photo " src="images/moon_bootz.jpg" alt="moon boots" />
   <h1>Moon Boots Features</h1>
   <ul>
     <li>Is comfortable at no gravity and low gravity</li>
