add reflect to index

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -16,7 +16,7 @@
     <article>
       <h2>First article</h2>
       <section>
-       <h3>First section</h3>
+       <h3>Section</h3>
         <p>
 
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -50,6 +50,29 @@
               <td>150</td>
           </tr>
         </table>
+      </section>
+      <section>
+        <h3>Reflect</h3>
+<p>What is the purpose of HTML5 semantic tags? Which ones do you see as most useful?</p>
+        <ol>
+          <li>Turn the HTML code more Readable</li>
+          <li>Sections, headers, headings</li>
+        </ol>
+<p>What is the order the browser uses to display elements on a page?</p>
+        <ol>
+          <li>From the most external to the most internal tag</li>
+        </ol>
+
+<p>What did you learn about Sublime in this challenge? Do you think you'll create more handy snippets at a later date?</p>
+        <ol>
+          <li>I lerned to create snippets</li>
+          <li>Yes, I already created more!</li>
+        </ol>
+<p>What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?</p>
+        <ol>
+          <li>Semantic tags</li>
+          <li>Reaing more about and practicing</li>
+        </ol>
       </section>
     </article>
   </main>
