fix typo on reflect

--- a/html/gps/index.html
+++ b/html/gps/index.html
@@ -71,7 +71,7 @@
 <p>What concept in this challenge was most difficult for you? How can you improve your understanding of this concept?</p>
         <ol>
           <li>Semantic tags</li>
-          <li>Reaing more about and practicing</li>
+          <li>Reading more about and practicing</li>
         </ol>
       </section>
     </article>
