add css and images to octopus page

--- a/css/positioning/octopus.html
+++ b/css/positioning/octopus.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title></title>
+  <title>Cool Octopus</title>
+  <link rel="stylesheet" type="text/css" href="octopus.css">
 </head>
 <body>
-
+  <img id="octopus" src="octopus.png"/>
+  <img id="hat" src="hat.png"/>
+  <img id ="glasses" src="glasses.png">
 </body>
 </html>
