--- a/web_dev/jquery/photos.html
+++ b/web_dev/jquery/photos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>Photos</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <div id="master">
