create a script file and add a reference in photos.html

--- a/web_dev/jquery/photos.html
+++ b/web_dev/jquery/photos.html
@@ -3,6 +3,8 @@
 <head>
   <title>Photos</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <script type="text/javascript" src="jquery.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <div id="master">
